Updated versioning capabilities of app.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,17 +20,18 @@
 cmake_minimum_required(VERSION 2.8)
 project(Wintermute)
 
-## Include our modules in the discovery of modules.
+## Include our modules in the discovery of modules and incorporate our build 
+## system's logic.
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
 include(CMakeUseLocalModules)
 include(CMakeProvideUninstallTarget)
+add_subdirectory(cmake)
 
 ## Import Wintermute's CMake infrastructure.
-include(FindWintermute)
 include(WintermuteVersioning)
+include(FindWintermute)
 
 ## Include sub-directories.
-add_subdirectory(cmake)
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(doc)
