--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,7 +67,7 @@ add_executable(wintermute ${WINTERMUTE_SOURCES})
 # Define properties for Wintermute's executable.
 set_target_properties(wintermute PROPERTIES
   FOLDER        "Wintermute/Core"
-  VERSION       "${WINTERMUTE_VERSION}"
+  #VERSION       "${WINTERMUTE_VERSION}"
   PROJECT_LABEL "Wintermute")
 
 # Add the necessary properties to the 'wintermute' executable.
