--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ branches:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq-dev libzmq-dbg libqt4-dbg
   - ./test/build_deps.sh
 
 before_script:
   - mkdir build
   - cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules/ -DLog4Qt_DIR=/usr/share/qt4/mkspecs/cmake/Log4Qt/
 
-script: make
+script: make test
 
 notifications:
   email:
