--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ branches:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq-dev libzmq-dbg libqt4-dbg
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq3-dev libzmq3-dbg libqt4-dbg
   - ./test/build_deps.sh
 
 before_script:
