--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - cd build
   - CMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules cmake .. -DCMAKE_BUILD_TYPE=Debug -DLog4Qt_DIR=/usr/share/qt4/mkspecs/cmake/Log4Qt/
 
-script: make Nightly
+script: make Experimental
 
 notifications:
   email:
