--- a/test/DartConfiguration.tcl.in
+++ b/test/DartConfiguration.tcl.in
@@ -3,12 +3,12 @@ SourceDirectory: @CMAKE_SOURCE_DIR@
 BuildDirectory: @CMAKE_BINARY_DIR@
 
 # Commands
-CoverageCommand: gcov
 MakeCommand: make wintermute unittest
 ConfigureCommand: cd @CMAKE_BINARY_DIR@ && make rebuild_cache
 
 DropSite: my.cdash.org
 DropLocation: /submit.php?project=Wintermute
+TriggerSite: my.cdash.org
 DropMethod: http
 
 # Git.
