--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq3-dev libzmq3-dbg libqt4-dbg
-  - ./test/build_deps.sh
+  - test/build_deps.sh
 
 before_script:
   - mkdir build
@@ -22,6 +22,6 @@ script: make wintermute unittest Experimental
 
 notifications:
   email:
-    - jacky.alcine@thesii.org
+    - me@jalcine.me
   on_success: change
   on_failure: always
