--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ branches:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq3-dev libzmq3-dbg libqt4-dbg
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq3-dev libzmq3-dbg libqt4-dbg python-pip python
+  - sudo pip install cpp-coveralls --use-mirrors
   - test/build_deps.sh
 
 before_script:
@@ -18,7 +19,13 @@ before_script:
   - cd build
   - CMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules cmake .. -DCMAKE_BUILD_TYPE=Debug -DLog4Qt_DIR=/usr/share/qt4/mkspecs/cmake/Log4Qt/
 
-script: make wintermute unittest Experimental
+script:
+  - make wintermute
+  - make unittest
+  - make Experimental
+
+after_success:
+  - coveralls --exclude tests
 
 notifications:
   email:
