Updated test suite.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,3 +31,4 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include"
 add_subdirectory(include)
 add_subdirectory(unit)
 
+## Add some coverage.
