--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libzmq3-dev libzmq3-dbg libqt4-dbg python-pip python
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg
+  - sudo apt-get install -qq libzmq3-dev libzmq3-dbg
+  - sudo apt-get install -qq python-pip python
   - test/build_deps.sh
 
 before_script:
