Fixed a folly issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
 before_script:
   - mkdir build && cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DLog4Qt_DIR=/usr/share/qt4/mkspecs/cmake/Log4Qt/
+
+script:
   - make wintermute
   - make unittest
   - make coverage
