--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg
-  - sudo apt-get install -qq libzmq3-dev libzmq3-dbg
+  - sudo apt-get install -qq libqjson0 libqjson-dev libqjson-dbg
   - sudo apt-get install -qq python-pip python
   - sudo apt-get install -qq g++-4.6 lcov valgrind
   - test/build_deps.sh
