--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 compiler:
-  - clang
   - gcc
+  - clang
 
 branches:
   only:
@@ -13,7 +13,7 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python g++-4.6 lcov valgrind
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python g++-4.6 lcov valgrind libzmq-dev libzmq-dbg libzmq0
   - sudo pip install cpp-coveralls
   - test/build_deps.sh
 
