--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python g++-4.6 lcov valgrind libzmq-dev libzmq-dbg libzmq1
+  - sudo apt-get install -qq cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python g++-4.6 lcov valgrind libzmq3-dev libzmq3-dbg libzmq3
   - sudo pip install cpp-coveralls
   - test/build_deps.sh
 
