--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 before_script:
   - export CMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules
   - mkdir build && cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug; cmake .. -DLog4Qt_DIR=/usr/share/qt4/mkspecs/cmake/Log4Qt/;
+  - cmake .. -DCMAKE_BUILD_TYPE=Debug; cmake ..
 
 script:
   - make wintermute
@@ -31,4 +31,4 @@ after_success:
 notifications:
   email: me@jalcine.me
   on_success: change
-  on_failure: change
+  on_failure: always
