No more gcov-4.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - make memorycheck
 
 after_success:
-  - coveralls --gcov `which gcov-4.6` -r . -e .
+  - coveralls -r . -e .
 
 notifications:
   email: me@jalcine.me
