--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -16,27 +16,4 @@
 ### You should have received a copy of the GNU General Public License
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
-
-cmake_minimum_required (VERSION 2.8)
-project(Wintermute)
-
-## Include our modules in the discovery of modules and incorporate our build
-## system's logic.
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
-set(WINTERMUTE_BUILD_PREFIX "${CMAKE_INSTALL_PREFIX}")
-set(WINTERMUTE_PLUGIN_DEFINITION_TEMPLATE "${CMAKE_SOURCE_DIR}/cmake/Templates/PluginDefinition.spec.in")
-include(CMakeUseLocalModules)
-include(CMakeProvideUninstallTarget)
-add_subdirectory(cmake)
-
-## Import Wintermute's CMake infrastructure.
-include ( WintermuteVersioning )
-include ( WintermuteVariables )
-include ( WintermuteDependencies )
-include ( WintermuteMacros )
-
-## Include sub-directories.
-add_subdirectory ( src )
-add_subdirectory ( lib )
-add_subdirectory ( test )
-#add_subdirectory(doc)
+add_subdirectory ( heartbeat )
