Updated ignores to exclude generated headers.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ cmake_install.cmake
 cmake_uninstall.cmake
 FindWintermute.cmake
 src/Wintermute/Globals
+lib/heartbeat/globals.hpp
 *.pyc
 gdb.txt
 *.orig
