--- a/lib/daemon/CMakeLists.txt
+++ b/lib/daemon/CMakeLists.txt
@@ -16,20 +16,20 @@
 ### You should have received a copy of the GNU General Public License
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
-project(WintermuteHeartbeat)
-set(heartbeat_SRCS
+project(WintermuteDaemon)
+set(daemon_SRCS
   plugin.cpp
   module.cpp)
 
-set(heartbeat_HDRS
+set(daemon_HDRS
   plugin.hpp
   module.hpp)
 
-configure_file(globals.hpp.in ${CMAKE_SOURCE_DIR}/lib/heartbeat/globals.hpp
+configure_file(globals.hpp.in ${CMAKE_SOURCE_DIR}/lib/daemon/globals.hpp
   @ONLY)
 
-wintermute_plugin_declare(TARGET heartbeat UUID ${heartbeat_UUID} SOURCES ${heartbeat_SRCS})
-wintermute_plugin_set_version(TARGET heartbeat
+wintermute_plugin_declare(TARGET daemon UUID ${daemon_UUID} SOURCES ${daemon_SRCS})
+wintermute_plugin_set_version(TARGET daemon
   PLUGIN_VERSION_MAJOR 0
   PLUGIN_VERSION_MINOR 1
   PLUGIN_VERSION_PATCH 0
@@ -40,12 +40,12 @@ wintermute_plugin_set_version(TARGET heartbeat
   SYSTEM_VERSION_PATCH ${WINTERMUTE_VERSION_PATCH}
   SYSTEM_VERSION_STAGE ${WINTERMUTE_VERSION_STAGE})
 
-wintermute_plugin_configure(TARGET heartbeat
+wintermute_plugin_configure(TARGET daemon
   AUTHOR_NAME "Jacky Alcine"
-  NAME_RPC "me.jalcine.wintermute.heartbeat"
+  NAME_RPC "me.jalcine.wintermute.daemon"
   EMAIL "me@jalcine.me"
-  URI "http://wintermute.jalcine.me/plugins/heartbeart.html"
+  URI "http://wintermute.jalcine.me/plugins/daemon.html"
   )
-wintermute_plugin_target_declare(TARGET heartbeat SOURCES ${heartbeat_SRCS})
+wintermute_plugin_target_declare(TARGET daemon SOURCES ${daemon_SRCS})
 include_directories(${Wintermute_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
-wintermute_plugin_install(TARGET heartbeat)
+wintermute_plugin_install(TARGET daemon)
