--- a/cmake/Templates/PluginDefinition.spec.in
+++ b/cmake/Templates/PluginDefinition.spec.in
@@ -1,10 +1,4 @@
-##
-## @group Plugin
-## This group contains important information about the core of this Wintermute 
-## plug-in.
-##
 [Plugin]
-UUID=${${_local}UUID}
 URI=${${_local}URI}
 Library=${${_local}TARGET}
 
@@ -12,14 +6,13 @@ Library=${${_local}TARGET}
 Email=${${_local}EMAIL}
 Name=${${_local}AUTHOR_NAME}
 
-[Plugin/Version]
+[Version/Plugin]
 Major=${${_local}PLUGIN_VERSION_MAJOR}
 Minor=${${_local}PLUGIN_VERSION_MINOR}
 Patch=${${_Local}PLUGIN_VERSION_PATCH}
 
-[System/Version]
+[Version/System]
 Major=${${_local}SYSTEM_VERSION_MAJOR}
 Minor=${${_local}SYSTEM_VERSION_MINOR}
 Patch=${${_local}SYSTEM_VERSION_PATCH}
 Comparsion=${${_local}SYSTEM_VERSION_COMPARSION}
-
