--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,17 @@
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
 cmake_minimum_required (VERSION 2.8)
+cmake_policy(SET CMP0017 NEW)
 
 ## Include our modules in the discovery of modules and incorporate our build
 ## system's logic.
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
-set(WINTERMUTE_BUILD_PREFIX "${CMAKE_INSTALL_PREFIX}")
-set(WINTERMUTE_PLUGIN_DEFINITION_TEMPLATE "${CMAKE_SOURCE_DIR}/cmake/Templates/PluginDefinition.spec.in")
+set(CMAKE_MODULE_PATH
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+set(WINTERMUTE_BUILD_PREFIX
+  ${CMAKE_INSTALL_PREFIX})
+set(WINTERMUTE_PLUGIN_DEFINITION_TEMPLATE
+  ${CMAKE_SOURCE_DIR}/cmake/Templates/PluginDefinition.spec.in)
+
 include(CMakeUseLocalModules)
 include(CMakeProvideUninstallTarget)
 add_subdirectory(cmake)
