--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,9 @@ set ( WINTERMUTE_SOURCES
   Wintermute/Procedure/call.cpp
   Wintermute/Procedure/lambda_call.cpp
   Wintermute/Procedure/method_call.cpp
+  Wintermute/Procedure/dispatcher.cpp
+  Wintermute/Procedure/dummy_dispatcher.cpp
+  Wintermute/Procedure/receiver.cpp
 
   ## Plugin binaries
   Wintermute/plugin.cpp
@@ -42,7 +45,7 @@ set ( WINTERMUTE_SOURCES
   Wintermute/version.cpp
   Wintermute/application.cpp
   main.cpp
-  )
+)
 
 set ( WINTERMUTE_HEADERS
   ## Pretty headers
@@ -57,6 +60,8 @@ set ( WINTERMUTE_HEADERS
   Wintermute/Procedure/Call
   Wintermute/Procedure/LambdaCall
   Wintermute/Procedure/MethodCall
+  Wintermute/Procedure/Dispatcher
+  Wintermute/Procedure/Receiver
 
   ## Native headers
   Wintermute/application.hpp
@@ -70,7 +75,9 @@ set ( WINTERMUTE_HEADERS
   Wintermute/Procedure/call.hpp
   Wintermute/Procedure/lambda_call.hpp
   Wintermute/Procedure/method_call.hpp
-  )
+  Wintermute/Procedure/dispatcher.hpp
+  Wintermute/Procedure/receiver.hpp
+)
 
 # Wrap up the sources.
 file ( MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/src/Wintermute"
