--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,5 +41,6 @@ include ( WintermuteMacros )
 ## Include sub-directories.
 add_subdirectory ( src )
 add_subdirectory ( lib )
+enable_testing()
 add_subdirectory ( test )
 #add_subdirectory(doc)
