--- a/test/include/Wintermute/testing.hpp.in
+++ b/test/include/Wintermute/testing.hpp.in
@@ -18,27 +18,14 @@
  * along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
  **/
 
+/**
+ * TODO: Define a suite of classes to be used for inheritance.
+ * TODO: Implement Wintermute::Testing::Test, providing the basis of testing.
+ * TODO: Implement Wintermute::Testing::UnitTest.
+ * TODO: Implement Wintermute::Testing::FeatureTest.
+ * TODO: Implement Wintermute::Testing::RegressionTest.
+ **/
+
 #include <QtCore/QCoreApplication>
-#include <QtCore/QProcess>
-
-/// Define some global defines for the suite.
-#define WINTERMUTE_EXECUTABLE "@WINTERMUTE_TEST_EXECUTABLE@"
-
-// TODO: Define a suite of classes to be used for inheritance.
-// TODO: Implement Wintermute::Testing::Test, providing the basis of testing.
-// TODO: Implement Wintermute::Testing::UnitTest.
-// TODO: Implement Wintermute::Testing::FeatureTest.
-// TODO: Implement Wintermute::Testing::RegressionTest.
-namespace Wintermute
-{
-namespace Testing
-{
-QProcess* spawnProcess ( const QStringList& arguments )
-{
-  QProcess* process = new QProcess ( qApp );
-  process->setProcessChannelMode ( QProcess::SeparateChannels );
-  process->start ( WINTERMUTE_EXECUTABLE, arguments );
-  return process;
-}
-}
-}
+#include <QtCore/QDebug>
+#include <QtTest/QtTest>
