--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -18,3 +18,4 @@
 ###############################################################################
 add_subdirectory ( heartbeat )
 add_subdirectory ( daemon )
+add_subdirectory ( zeromq )
